old-kubernetes-cluster/automatisch/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automatisch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automatisch
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: automatisch
    spec:
      containers:
        - name: automatisch
          image: rossreicks/automatisch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: automatisch-data
              mountPath: /automatisch/storage
      volumes:
        - name: automatisch-data
          persistentVolumeClaim:
            claimName: automatisch-data-claim
      restartPolicy: Always
